--- a/CustomMacroBase/CustomControlEx/StackPanelEx/cStackPanel_style.xaml
+++ b/CustomMacroBase/CustomControlEx/StackPanelEx/cStackPanel_style.xaml
@@ -1,7 +1,9 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:CustomMacroBase.CustomControlEx.StackPanelEx">
-    
+
+    <local:cStackPanel_converter_itemsheight2visibility x:Key="cStackPanel_converter_itemsheight2visibility"/>
+
     <VisualBrush x:Key="StripeTexture" TileMode="Tile" Viewport="0,0,3,3" ViewportUnits="Absolute" Viewbox="0,0,15,15" ViewboxUnits="Absolute">
         <VisualBrush.Visual>
             <Grid Background="Transparent" RenderTransformOrigin="0.5,0.5">
@@ -33,15 +35,18 @@
                             <Border Grid.ColumnSpan="2" Background="Transparent"/>
 
                             <!--容器-->
-                            <ItemsPresenter Grid.Column="0" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
+                            <ItemsPresenter x:Name="itemsPresenter" Grid.Column="0"
+                                            SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" 
+                                            VerticalAlignment="Center"/>
 
                             <!--辅助线-->
                             <Grid x:Name="GuideLine" Grid.Column="1"
                                   Background="Transparent" 
                                   Opacity="0" 
                                   HorizontalAlignment="Stretch" 
-                                  VerticalAlignment="Stretch"
+                                  VerticalAlignment="Center"
                                   OpacityMask="{StaticResource StripeTexture}"
+                                  Visibility="{Binding ActualHeight, ElementName=itemsPresenter, Converter={StaticResource cStackPanel_converter_itemsheight2visibility}}"
                                   Margin="2,1,0,0"
                                   IsHitTestVisible="False">
                                 <Border HorizontalAlignment="Stretch"
