--- a/CustomMacroFactory/MainView/UserControlEx/TitleBarEx/uTitleBar.xaml
+++ b/CustomMacroFactory/MainView/UserControlEx/TitleBarEx/uTitleBar.xaml
@@ -11,11 +11,17 @@
              d:MinWidth="240"
              d:DataContext="{d:DesignInstance local:uTitleBar_viewmodel, IsDesignTimeCreatable=True}"
              >
+    <i:Interaction.Triggers>
+        <i:EventTrigger EventName="Loaded">
+            <i:InvokeCommandAction Command="{Binding LoadedCommand}"/>
+        </i:EventTrigger>
+    </i:Interaction.Triggers>
+    
     <UserControl.Resources>
         <ResourceDictionary>
             <SolidColorBrush Color="#862E2F34" x:Key="AreaColor"/>
             
-            <DoubleCollection x:Key = "double_def">15 11.5</DoubleCollection>
+            <DoubleCollection x:Key = "double_def">15 11.5 12.5</DoubleCollection>
             <Geometry x:Key="GamePadIcon">
                 M334 483.1a78.9 78.9 0 1 0 78.9 78.9 79 79 0 0 0-78.9-78.9z m0 138.4a59.5 59.5 0 1 1 59.5-59.5 59.57 59.57 0 0 1-59.5 59.5z
                 M332.5 244m10.05 0l338.9 0q10.05 0 10.05 10.05l0 180.9q0 10.05-10.05 10.05l-338.9 0q-10.05 0-10.05-10.05l0-180.9q0-10.05 10.05-10.05Z
@@ -52,7 +58,7 @@
         <!--靠左-->
         <StackPanel Grid.Column="0" Orientation="Horizontal" HorizontalAlignment="Left" Margin="0" VerticalAlignment="Stretch" 
                     d:Background="#80DC146D">
-            <titlebarbuttonex:cTitleBarButton x:Name="IconBtn" Type="MaxMinBtn" Margin="1,0,0,0" Padding="1"
+            <titlebarbuttonex:cTitleBarButton x:Name="IconBtn" Type="EmptyBtn" Margin="1,0,0,0" Padding="1"
                                               Height="24" Width="24" Focusable="False" IsHitTestVisible="False">
                 <Grid Width="20" Height="20" Margin="0" HorizontalAlignment="Center" VerticalAlignment="Center">
                     <Rectangle Fill="Snow" RadiusX="2.5" RadiusY="{Binding RadiusX, RelativeSource={RelativeSource Self}}" Margin="0"/>
@@ -77,23 +83,24 @@
         <!--靠右-->
         <StackPanel Grid.Column="1" Orientation="Horizontal" Margin="0" HorizontalAlignment="Right"
                     d:Background="#8014DCDC">
-            <titlebarbuttonex:cTitleBarButton x:Name="ResetPosBtn" Type="MaxMinBtn" Width="30" Height="25" HorizontalAlignment="Right" VerticalAlignment="Center"
+            <titlebarbuttonex:cTitleBarButton x:Name="TopmostBtn" Type="TopmostBtn" Width="30" Height="25" HorizontalAlignment="Right" VerticalAlignment="Center"
                                               IsActive="{Binding IsActive, RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=Window}, Mode=OneWay}"
-                                              Command="{Binding ResetPosButtonCommand}">
-                <Path Data="M838.695 374.154A354.62 354.62 0 0 0 512 157.538a354.462 354.462 0 1 0 0 708.924A354.58 354.58 0 0 0 842.161 641.26a39.385 39.385 0 1 1 73.334 28.751A433.31 433.31 0 0 1 512 945.231C272.738 945.23 78.77 751.26 78.77 512S272.737 78.77 512 78.77c144.423 0 275.14 71.285 354.462 183.965V177.23a39.385 39.385 0 0 1 78.769 0v236.307a39.266 39.266 0 0 1-39.385 39.385H708.923a39.385 39.385 0 0 1 0-78.77h129.772z"
-                      Fill="{Binding Foreground, ElementName=CloseBtn, Mode=OneWay}"
-                      Margin="0" 
-                      Stretch="Fill" 
-                      Width="{Binding [1], Source={StaticResource double_def}}"
-                      Height="{Binding Width, RelativeSource={RelativeSource Self}}"/>
-            </titlebarbuttonex:cTitleBarButton>
+                                              IsChecked="{Binding Topmost, Mode=OneWay}"
+                                              Command="{Binding TopmostButtonCommand}"
+                                              PathData="M320 64c-35.346 0-64 28.654-64 64 0 35.346 28.654 64 64 64h32v256.246c-105.811 5.21-190 92.65-190 199.754v48a8 8 0 0 0 8 8h295v248a8 8 0 0 0 8 8h80a8 8 0 0 0 8-8V704h295a8 8 0 0 0 8-8v-48c0-107.778-85.252-195.644-192-199.843V192h32c35.346 0 64-28.654 64-64 0-35.346-28.654-64-64-64H320z"
+                                              PathSize="{Binding [2], Source={StaticResource double_def}}"/>
+            <titlebarbuttonex:cTitleBarButton x:Name="ResetPosBtn" Type="ResetPosBtn" Width="30" Height="25" HorizontalAlignment="Right" VerticalAlignment="Center"
+                                              IsActive="{Binding IsActive, RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=Window}, Mode=OneWay}"
+                                              Command="{Binding ResetPosButtonCommand}"
+                                              PathData="M672.911 226.447A326.697 326.697 0 0 0 512 184.32c-180.982 0-327.68 146.698-327.68 327.68S331.018 839.68 512 839.68 839.68 692.982 839.68 512a61.44 61.44 0 0 1 122.88 0c0 248.832-201.728 450.56-450.56 450.56S61.44 760.832 61.44 512 263.168 61.44 512 61.44c90.87 0 177.377 27.095 250.163 75.756l69.694-69.694c8.355-8.356 22.22-8.028 30.965 0.717 4.055 4.075 6.472 9.462 6.759 15.094l11.018 231.956a31.068 31.068 0 0 1-32.85 32.85L615.793 337.08a23.142 23.142 0 0 1-21.873-22.917c0-5.611 2.17-10.916 6.062-14.786l72.909-72.91z"
+                                              PathSize="{Binding [2], Source={StaticResource double_def}}"/>
             <titlebarbuttonex:cTitleBarButton x:Name="MinimizeBtn" Type="MaxMinBtn" Width="30" Height="25" HorizontalAlignment="Right" VerticalAlignment="Center" IsEnabled="False"
                                               IsActive="{Binding IsActive, RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=Window}, Mode=OneWay}"
                                               Command="{Binding MinimizeButtonCommand}">
                 <Path Data="M984.615385 955.076923c0 15.753846-13.784615 29.538462-29.538462 29.538462h-886.153846c-15.753846 0-29.538462-13.784615-29.538462-29.538462v-59.076923c0-15.753846 13.784615-29.538462 29.538462-29.538462h886.153846c15.753846 0 29.538462 13.784615 29.538462 29.538462v59.076923z"
                       Fill="{Binding Foreground, ElementName=CloseBtn, Mode=OneWay}"
                       Margin="0,9,0,0"
-                      Stretch="Fill"
+                      Stretch="Uniform"
                       Width="{Binding [1], Source={StaticResource double_def}}"
                       Height="1"/>
             </titlebarbuttonex:cTitleBarButton>
@@ -104,18 +111,18 @@
                             M124.462 128.688h803.533v64H124.462z"
                       Fill="{Binding Foreground, ElementName=CloseBtn, Mode=OneWay}"
                       Margin="0"
-                      Stretch="Fill"
+                      Stretch="Uniform"
                       Width="{Binding [1], Source={StaticResource double_def}}"
                       Height="{Binding Width, RelativeSource={RelativeSource Self}}"/>
             </titlebarbuttonex:cTitleBarButton>
             <titlebarbuttonex:cTitleBarButton x:Name="CloseBtn" Type="CloseBtn" Width="30" Height="25" HorizontalAlignment="Right" VerticalAlignment="Center"
                                               IsActive="{Binding IsActive, RelativeSource={RelativeSource Mode=FindAncestor,AncestorType=Window}, Mode=OneWay}"
                                               Command="{Binding CloseButtonCommand}"
-                                              Foreground="#FFDCDFE1" >
+                                              Foreground="#FFDCDFE1">
                 <Path Data="M571.733333 512l268.8-268.8c17.066667-17.066667 17.066667-42.666667 0-59.733333-17.066667-17.066667-42.666667-17.066667-59.733333 0L512 452.266667 243.2 183.466667c-17.066667-17.066667-42.666667-17.066667-59.733333 0-17.066667 17.066667-17.066667 42.666667 0 59.733333L452.266667 512 183.466667 780.8c-17.066667 17.066667-17.066667 42.666667 0 59.733333 8.533333 8.533333 19.2 12.8 29.866666 12.8s21.333333-4.266667 29.866667-12.8L512 571.733333l268.8 268.8c8.533333 8.533333 19.2 12.8 29.866667 12.8s21.333333-4.266667 29.866666-12.8c17.066667-17.066667 17.066667-42.666667 0-59.733333L571.733333 512z"
                       Fill="{Binding Foreground, ElementName=CloseBtn, Mode=OneWay}"
                       Margin="0" 
-                      Stretch="Fill" 
+                      Stretch="Uniform" 
                       Width="{Binding [1], Source={StaticResource double_def}}"
                       Height="{Binding Width, RelativeSource={RelativeSource Self}}"/>
             </titlebarbuttonex:cTitleBarButton>
