--- a/CustomMacroFactory/MVVM/Views/ImageColorPicker.xaml
+++ b/CustomMacroFactory/MVVM/Views/ImageColorPicker.xaml
@@ -141,8 +141,8 @@
         <Grid Grid.Row="2" Margin="2,0,2,2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
+                <ColumnDefinition Width="120"/>
+                <ColumnDefinition Width="120"/>
             </Grid.ColumnDefinitions>
             
             <Border HorizontalAlignment="Left">
@@ -151,6 +151,7 @@
                                             Icon="{Binding DataContext.AimIcon, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}, Mode=OneWay}"/>
             </Border>
 
+            <!--ClickHex-->
             <Grid Grid.Column="1">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="auto"/>
@@ -159,7 +160,7 @@
 
                 <Border Grid.Column="0" 
                         Width="25" Height="25" BorderThickness="2" CornerRadius="5" HorizontalAlignment="Center"
-                        Background="{Binding ColorHex.Hex}"
+                        Background="{Binding ClickHex.Hex}"
                         Margin="0,0,5,0">
                     <Border.BorderBrush>
                         <VisualBrush>
@@ -176,19 +177,57 @@
                     </Border.BorderBrush>
                 </Border>
 
-                <Grid Grid.Column="1" d:Background="Crimson">
+                <Grid Grid.Column="1">
                     <Grid.RowDefinitions>
                         <RowDefinition/>
                         <RowDefinition/>
                     </Grid.RowDefinitions>
 
-                    <TextBlock Grid.Row="0" Text="{Binding ColorHex.Hex}" Foreground="White" VerticalAlignment="Bottom"
+                    <TextBlock Grid.Row="0" Text="{Binding ClickHex.Hex}" Foreground="White" VerticalAlignment="Bottom"
                                Margin="0,0,0,-2"/>
-                    <TextBlock Grid.Row="1" Text="{Binding ColorHex.Pos}" Foreground="White" VerticalAlignment="Top"
+                    <TextBlock Grid.Row="1" Text="{Binding ClickHex.Pos}" Foreground="White" VerticalAlignment="Top"
                                Margin="0,-2,0,0"/>
                 </Grid>
             </Grid>
 
+            <!--MoveHex-->
+            <Grid Grid.Column="2">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+
+                <Border Grid.Column="0" 
+                        Width="25" Height="25" BorderThickness="2" CornerRadius="5" HorizontalAlignment="Center"
+                        Background="{Binding MoveHex.Hex}"
+                        Margin="0,0,5,0">
+                    <Border.BorderBrush>
+                        <VisualBrush>
+                            <VisualBrush.Visual>
+                                <Rectangle StrokeDashArray="2 1"
+                                           Stroke="White"
+                                           StrokeThickness="2"
+                                           RadiusX="{Binding RelativeSource={RelativeSource AncestorType={x:Type Border}}, Path=CornerRadius.TopRight}"
+                                           RadiusY="{Binding RelativeSource={RelativeSource AncestorType={x:Type Border}}, Path=CornerRadius.BottomLeft}"
+                                           Width="{Binding RelativeSource={RelativeSource AncestorType={x:Type Border}}, Path=ActualWidth}"
+                                           Height="{Binding RelativeSource={RelativeSource AncestorType={x:Type Border}}, Path=ActualHeight}"/>
+                            </VisualBrush.Visual>
+                        </VisualBrush>
+                    </Border.BorderBrush>
+                </Border>
+
+                <Grid Grid.Column="1">
+                    <Grid.RowDefinitions>
+                        <RowDefinition/>
+                        <RowDefinition/>
+                    </Grid.RowDefinitions>
+
+                    <TextBlock Grid.Row="0" Text="{Binding MoveHex.Hex}" Foreground="White" VerticalAlignment="Bottom"
+                               Margin="0,0,0,-2"/>
+                    <TextBlock Grid.Row="1" Text="{Binding MoveHex.Pos}" Foreground="White" VerticalAlignment="Top"
+                               Margin="0,-2,0,0"/>
+                </Grid>
+            </Grid>
         </Grid>
     </Grid>
 </UserControl>
