--- a/CustomMacroFactory/MVVM/Views/MacroViewer.xaml
+++ b/CustomMacroFactory/MVVM/Views/MacroViewer.xaml
@@ -1,8 +1,9 @@
 ﻿<UserControl x:Class="CustomMacroFactory.MVVM.Views.MacroViewer"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:designtimeviewmodel="clr-namespace:CustomMacroFactory.MVVM.DesignTimeViewModels"
              xmlns:v="clr-namespace:CustomMacroFactory.MVVM.Views"
              xmlns:vm="clr-namespace:CustomMacroFactory.MVVM.ViewModels"
              xmlns:converters="clr-namespace:CustomMacroFactory.MVVM.Converters"
@@ -12,7 +13,7 @@
              mc:Ignorable="d"
              d:MinWidth="240"
              d:MinHeight="240"
-             d:DataContext="{d:DesignInstance vm:MacroViewerVM, IsDesignTimeCreatable=False}">
+             d:DataContext="{d:DesignInstance designtimeviewmodel:MacroViewerVM, IsDesignTimeCreatable=True}">
     
     <UserControl.Resources>
         <ResourceDictionary>
