--- a/CustomMacroFactory/MVVM/Views/CustomControlPreView.xaml
+++ b/CustomMacroFactory/MVVM/Views/CustomControlPreView.xaml
@@ -6,17 +6,16 @@
              xmlns:local="clr-namespace:CustomMacroFactory.MVVM.Views"
              xmlns:AttachedProperty="clr-namespace:CustomMacroBase.Helper.Extensions;assembly=CustomMacroBase"
              xmlns:ConsoleListBoxEx="clr-namespace:CustomMacroBase.CustomControlEx.ConsoleListBoxEx;assembly=CustomMacroBase" 
-             xmlns:verticalbuttonex="clr-namespace:CustomMacroBase.CustomControlEx.VerticalButtonEx;assembly=CustomMacroBase" 
-             xmlns:sliderex="clr-namespace:CustomMacroBase.CustomControlEx.SliderEx;assembly=CustomMacroBase" 
-             xmlns:valueindicatorex="clr-namespace:CustomMacroBase.CustomControlEx.ValueIndicatorEx;assembly=CustomMacroBase"
-             xmlns:scrollviewerex="clr-namespace:CustomMacroBase.CustomControlEx.ScrollViewerEx;assembly=CustomMacroBase" 
-             xmlns:comboboxex="clr-namespace:CustomMacroBase.CustomControlEx.ComboBoxEx;assembly=CustomMacroBase" 
-             xmlns:colorfultextblockex="clr-namespace:CustomMacroBase.CustomControlEx.ColorfulTextBlockEx;assembly=CustomMacroBase" 
              xmlns:tooltipinfobuttonex="clr-namespace:CustomMacroBase.CustomControlEx.TooltipInfoButtonEx;assembly=CustomMacroBase"
              
+             xmlns:scrollviewerex="clr-namespace:TrarsUI.Shared.Controls.ScrollViewerEx;assembly=TrarsUI.Shared" 
+             xmlns:colorfultextblockex="clr-namespace:TrarsUI.Shared.Controls.ColorfulTextBlockEx;assembly=TrarsUI.Shared"
              xmlns:verticalradiobuttonex="clr-namespace:TrarsUI.Shared.Controls.VerticalRadioButtonEx;assembly=TrarsUI.Shared"
-             xmlns:togglebuttonex="clr-namespace:TrarsUI.Shared.Controls.ToggleButtonEx;assembly=TrarsUI.Shared"
-             
+             xmlns:togglebuttonex="clr-namespace:TrarsUI.Shared.Controls.ToggleButtonEx;assembly=TrarsUI.Shared" 
+             xmlns:sliderex="clr-namespace:TrarsUI.Shared.Controls.SliderEx;assembly=TrarsUI.Shared" 
+             xmlns:valueindicatorex="clr-namespace:TrarsUI.Shared.Controls.ValueIndicatorEx;assembly=TrarsUI.Shared" 
+             xmlns:comboboxex="clr-namespace:TrarsUI.Shared.Controls.ComboBoxEx;assembly=TrarsUI.Shared"
+             xmlns:verticalbuttonex="clr-namespace:TrarsUI.Shared.Controls.VerticalButtonEx;assembly=TrarsUI.Shared"
              mc:Ignorable="d" 
              
              SnapsToDevicePixels="True" 
